data/repos_history/allamand/k8s-config/2021-05-27T16:32:14Z/workloads/eks-app-mesh-fullappv1-appmesh.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: frontend
  namespace: my-apps
spec:
  awsName: frontend.my-apps.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: frontend-virtual-router
---
# Virtual Gateway Resources
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: backend
  namespace: my-apps
spec:
  awsName: backend.my-apps.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: backend-virtual-router

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: my-apps
  labels:
    app: frontend
    service: frontend
spec:
  ports:
    - port: 8080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1
  namespace: my-apps
  labels:
    app: frontend-v1
    service: frontend
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: frontend-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  namespace: my-apps
  labels:
    app: frontend-v1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-v1
      version: v1
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend-v1
        version: v1
    spec:
      serviceAccountName: demo-frontend
      nodeSelector:
        node.k8s.aws/capacity-type: 'spot'
      tolerations:
        - key: 'karpenter.com/taint'
          operator: 'Exists'
          effect: 'NoSchedule'
      containers:
        - name: frontend
          image: 382076407153.dkr.ecr.eu-west-1.amazonaws.com/frontendv1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: my-apps
  labels:
    app: backend
    service: backend
spec:
  ports:
    - port: 8080
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: backend-v1
  namespace: my-apps
  labels:
    app: backend-v1
    service: backend
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: backend-v1
---
apiVersion: v1
kind: Service
metadata:
  name: backend-v2
  namespace: my-apps
  labels:
    app: backend-v2
    service: backend
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: backend-v2
---
apiVersion: v1
kind: Service
metadata:
  name: backend-v3
  namespace: my-apps
  labels:
    app: backend-v3
    service: backend
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: backend-v3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: my-apps
  labels:
    app: backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-v1
      version: v1
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-v1
        version: v1
    spec:
      serviceAccountName: backend
      nodeSelector:
        node.k8s.aws/capacity-type: 'spot'
      tolerations:
        - key: 'karpenter.com/taint'
          operator: 'Exists'
          effect: 'NoSchedule'
      containers:
        - name: backendv1
          image: 382076407153.dkr.ecr.eu-west-1.amazonaws.com/backendv1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  namespace: my-apps
  labels:
    app: backend
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-v2
      version: v2
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-v2
        version: v2
    spec:
      serviceAccountName: backend
      nodeSelector:
        node.k8s.aws/capacity-type: 'spot'
      tolerations:
        - key: 'karpenter.com/taint'
          operator: 'Exists'
          effect: 'NoSchedule'
      containers:
        - name: backendv2
          image: 382076407153.dkr.ecr.eu-west-1.amazonaws.com/backendv2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v3
  namespace: my-apps
  labels:
    app: backend
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-v3
      version: v3
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-v3
        version: v3
    spec:
      serviceAccountName: backend
      nodeSelector:
        node.k8s.aws/capacity-type: 'spot'
      tolerations:
        - key: 'karpenter.com/taint'
          operator: 'Exists'
          effect: 'NoSchedule'
      containers:
        - name: backendv3
          image: 382076407153.dkr.ecr.eu-west-1.amazonaws.com/backendv3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m

---
apiVersion: v1
kind: Service
metadata:
  name: ingress-gateway
  namespace: my-apps
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: 'nlb'
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: ingress-gateway

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-gateway
  namespace: my-apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ingress-gateway
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ingress-gateway
    spec:
      serviceAccountName: ingress-gateway
      nodeSelector:
        node.k8s.aws/capacity-type: 'spot'
      tolerations:
        - key: 'karpenter.com/taint'
          operator: 'Exists'
          effect: 'NoSchedule'
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.eu-west-1.amazonaws.com/aws-appmesh-envoy:v1.12.5.0-prod
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
# Horizontal Pod Autoscalers
